<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Child"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_child_title"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_gender"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp" />
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"></Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_name"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName|textCapWords|textCapSentences"
        android:lines="1"
        android:maxLength="32"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_gender"/>

    <com.bearcats.tamagoparent.views.FButton
        android:id="@+id/btn_pickDate"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_menu_24px"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/action_next"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_gender"/>

    <EditText
        android:id="@+id/edit_saving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName|textCapWords|textCapSentences"
        android:lines="1"
        android:maxLength="32"
        android:gravity="center"/>


    <com.bearcats.tamagoparent.views.FButton
        android:id="@+id/btn_finish"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_menu_24px"
        android:text="@string/action_finish"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white" />




</LinearLayout>