<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/chicken"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/ic_chicken"
        android:layout_below="@id/verification"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"/>

    <TextView
        android:id="@+id/text_input_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chicken"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linear_layout_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_phone_number"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <com.bearcats.tamagoparent.views.FButton
            android:id="@+id/btn_country_code"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            fbutton:buttonColor="#FDFDFD"
            android:layout_marginLeft="3dp"
            android:text="🇮🇩 +62"/>

        <EditText
            android:id="@+id/edittext_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="12"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_otp_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_note"
        android:layout_below="@id/linear_layout_inner"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="25dp"/>


    <com.bearcats.tamagoparent.views.FButton
        android:id="@+id/btn_send_otp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/action_send_otp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        fbutton:buttonColor="@color/colorPrimary"
        fbutton:shadowEnabled="true"/>

</RelativeLayout>