<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:contentInsetEnd="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/loading_circle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/login_margin_top"/>

    <ImageView
        android:id="@+id/chicken"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/chicken_size"
        android:src="@drawable/ic_otp_wait"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/login_chicken_margin_top"/>

    <TextView
        android:id="@+id/text_tell_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_your_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chicken"
        android:layout_marginTop="@dimen/login_margin_top"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linear_layout_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_tell_your_name"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_name"
            android:inputType="textPersonName|textCapWords|textCapSentences"
            android:lines="1"
            android:maxLength="32"
            android:gravity="center"/>
    </LinearLayout>


    <com.bearcats.tamagoparent.views.FButton
        android:id="@+id/btn_next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        fbutton:buttonColor="@color/colorPrimary"
        fbutton:shadowEnabled="true"/>

</RelativeLayout>