<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_Mission">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_create_mission"
            android:background="@android:color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create a Mission For Child"
                android:layout_gravity="center"
                android:textColor="#c0c0c0"
                android:textSize="19dp"
                android:layout_marginVertical="10dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/quicksand_b"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F5F5F5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_b"
                android:textSize="18sp"
                android:text="@string/mission_name"
                android:layout_weight="2"
                />

            <EditText
                android:id="@+id/edit_misisonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords|textCapSentences"
                android:lines="1"
                android:maxLength="32"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_b"
                android:textSize="18sp"
                android:text="@string/mission_detail"
                android:layout_weight="2"
                />

            <EditText
                android:id="@+id/edit_missionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords|textCapSentences"
                android:lines="1"
                android:layout_weight="1"
                android:maxLength="32" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_b"
                android:textSize="18sp"
                android:text="@string/mission_deadline"
                android:layout_weight="2"
                />

            <EditText
                android:id="@+id/edit_missionDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:focusable="false"
                android:clickable="true"
                android:lines="1"
                android:maxLength="32"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:fontFamily="@font/quicksand_b"
                android:text="@string/Reward"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/rg_reward">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Egg"
                    android:id="@+id/rb_egg"
                    android:fontFamily="@font/quicksand_b"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wallet"
                    android:id="@+id/rb_wallet"
                    android:fontFamily="@font/quicksand_b"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_b"
                android:textSize="18sp"
                android:text="@string/amount"
                android:layout_weight="2"
                />

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxLength="32"
                android:layout_weight="1"/>
        </LinearLayout>

        <com.bearcats.tamagoparent.views.FButton
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_menu_24px"
            android:text="@string/action_finish"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>